# datadoc-editor

./: .cookiecutter.json  .cruft.json  .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  flake.nix  gunicorn.conf.py  noxfile.py  pyproject.toml  sonar-project.properties
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: constraints.txt  docker-build.yml  docs.yml  integration-test.yml  labeler.yml  release.yml  tests.yml
docs/: conf.py  index.md  reference.md
src/datadoc/: app.py  config.py
src/datadoc/assets/: input_style.css  workspace_style.css
src/datadoc/frontend/callbacks/: dataset.py  register_callbacks.py  utils.py  variables.py
src/datadoc/frontend/components/: builders.py
src/datadoc/frontend/fields/: display_base.py  display_pseudo_variables.py
src/datadoc/logging_configuration/: json_formatter.py
src/datadoc_editor/: __init__.py  app.py  config.py  constants.py  enums.py  utils.py
src/datadoc_editor/assets/: app_style.css  controlbar_style.css  dropdown_style.css  global_variables_style.css  glossary.css  header.css  input_style.css  multidropdown_style.css  multilanguage_style.css  workspace_style.css  workspace_tab.css
src/datadoc_editor/frontend/: constants.py
src/datadoc_editor/frontend/callbacks/: __init__.py  dataset.py  dataset_callbacks.py  global_variables.py  global_variables_callbacks.py  pseudonymization_callbacks.py  register_callbacks.py  use_restrictions_callbacks.py  utils.py  variables.py  variables_callbacks.py
src/datadoc_editor/frontend/components/: builders.py  control_bars.py  global_variables_builders.py  identifiers.py
src/datadoc_editor/frontend/fields/: display_base.py  display_dataset.py  display_global_variables.py  display_globals.py  display_pseudo_variables.py  display_variables.py
src/datadoc_editor/logging_configuration/: logging_config.py
tests/: conftest.py  test_model.py  test_smoke.py  test_utils.py
tests/frontend/callbacks/: test_callbacks_utils.py  test_dataset_callbacks.py  test_global_variables_callbacks.py  test_pseudonymization_callbacks.py  test_variables_callbacks.py
tests/frontend/components/: test_build_accordion.py  test_build_dataset_edit_section.py  test_build_edit_section.py  test_build_global_variables.py  test_build_globals_section.py  test_build_input_section.py  test_build_pseudo_section.py
tests/frontend/fields/: test_display_dataset.py  test_display_global_variables.py  test_display_variables.py
tests/resources/klargjorte_data/: person_testdata_p2021-12-31_p2021-12-31_v1__DOC.json
tests/resources/klargjorte_data copy/: person_testdata_p2021-12-31_p2021-12-31_v1__DOC.json
tests/resources/klargjorte_data copy 2/: person_data_v1__DOC.json
tests/resources/pseudonymiserte_data/: person_testdata_p2021-12-31_p2021-12-31_v1__DOC.json
